--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,9 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.0"
-group= "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+version = "1.6.4-1.0.0"
+group= "com.faol.TestMod" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "TestMod"
 
 minecraft {
 	version = "1.6.4-9.11.1.964"
